--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -2,14 +2,14 @@
     width:100%;
     margin: auto; 
     border-radius: 15px;
-    box-shadow: Opx 0px 10px;
+    box-shadow: 0px 0px 10px;
     transition: 0.3s;
     animation: fadeIn 1s;
 
 }
 .food-item-image{ 
     width: 100%;
-    border-radius: 15px 15px Opx Opx;
+    border-radius: 15px 15px 0px 0px;
 }
 .food-item-info{ 
     padding: 20px;
@@ -28,14 +28,14 @@
     width: 70px;
 }
 .food-item-desc{
-    color:口#676767;
+    color: #676767;
     font-size: 12px;
 }
 .food-item-price{
     color:tomato;
     font-size:22px;
     font-weight:500;
-    margin: 10px Opx;
+    margin: 10px 0px;
 }
 .food-item-img-container{ 
     position: relative;
@@ -58,4 +58,7 @@
     padding: 6px; 
     border-radius: 50px; 
     background-color:white;
+}
+.food-item-counter img{
+    width: 30px;
 }
