--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
     gap: 20px;
     padding: 20px 8vw;
     padding-top: 80px;
+    margin-top: 100px;
 }
 .footer-content {
     width: 100%;
@@ -33,10 +34,19 @@
     margin-right: 15px;
 }
 .footer hr {
-    width: 100;
+    width: 100%;
     height: 2px;
     margin: 20px 0;
     background-color: grey;
     border: none;
 }
-
+@media (max-width:750px){
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
+}
